2008-10-31  Full Name  <Email Address>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	fixed 'Bug 436879 - 'exe' references not added to code completion'.

2008-10-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/IMember.cs:
	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs: Fixed protected member
	access.

2008-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: When creating a project, use
	the provided project name when setting the assembly name. The project
	object name can't be used here because it is still not valid. Fixes
	bug #437392.

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Reset
	the default output assembly name before reading a configuration.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/ResolveResult.cs:
	* MonoDevelop.Projects.Dom/AbstractMember.cs:
	* MonoDevelop.Projects.Dom/ExpressionContext.cs: Fixed speed issue.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs:
	* MonoDevelop.Projects.Dom.Serialization/NamespaceEntry.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	fixed 'Bug 436312 - Couldn't deal well with elements which have
	generic and non-generic presence at the same time'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: fixed "Bug 432434 - Code
	completion doesn't work with subclasses".

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: When creating a new
	configuration, give it a valid path and assembly name. Fixes bug
	#439047 - Cannot create makefiles.
