@@ -1,5 +1,15 @@
 2008-10-31  Full Name  <Email Address>
 
+	* MonoDevelop.Projects.Dom/DomCecilType.cs:
+	* MonoDevelop.Projects.Dom/DomCecilField.cs:
+	* MonoDevelop.Projects.Dom/DomCecilEvent.cs:
+	* MonoDevelop.Projects.Dom/DomCecilMethod.cs:
+	* MonoDevelop.Projects.Dom/DomCecilProperty.cs:
+	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: fixed 'Bug 440366
+	- Cannot override base methods'.
+
+2008-10-31  Full Name  <Email Address>
+
 	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
 	* MonoDevelop.Projects.Dom.Serialization/DatabaseProjectDom.cs:
 	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
